# mermaid-cli

./: .clippy.toml  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  conversation_persistence_complete.md  docker-compose.yml  litellm_config.yaml  rustfmt.toml  start_litellm.sh  test_cache_performance.sh  test_conversation_memory.md  test_file_operations.md  test_markdown.md  test_non_interactive.sh  test_startup.sh
.github/workflows/: release.yml  rust.yml
src/: constants.rs  lib.rs  main.rs
src/agents/: action_executor.rs  executor.rs  filesystem.rs  git.rs  mod.rs  mode_aware_executor.rs  parser.rs  types.rs
src/app/: config.rs  mod.rs  state.rs
src/cache/: cache_manager.rs  file_cache.rs  mod.rs  types.rs
src/cli/: args.rs  commands.rs  mod.rs
src/context/: analyzer.rs  loader.rs  mod.rs  ranker.rs  repo_graph.rs  repomap.rs  tree_parser.rs
src/diagnostics/: gpu.rs  mod.rs  monitor.rs  panel.rs  types.rs
src/models/: factory.rs  lazy_context.rs  mod.rs  traits.rs  types.rs  unified.rs
src/ollama/: detector.rs  guide.rs  installer.rs  mod.rs
src/proxy/: health.rs  manager.rs  mod.rs  podman.rs
src/runtime/: mod.rs  non_interactive.rs  orchestrator.rs
src/session/: conversation.rs  mod.rs  selector.rs  state.rs
src/tui/: app.rs  chat.rs  input.rs  markdown.rs  mod.rs  mode.rs  render.rs  theme.rs  ui.rs  widgets.rs
src/utils/: errors.rs  file_watcher.rs  logger.rs  mod.rs  syntax.rs  tokenizer.rs
