[package]
name = "mermaid"
version = "0.1.0"
edition = "2021"
authors = ["Noah Sabaj <noahsabaj@gmail.com>"]
description = "An open-source, model-agnostic AI pair programmer CLI"
repository = "https://github.com/noahsabaj/mermaid-cli"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# TUI
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = "0.7"

# Model clients - using our own unified interface with HTTP clients

# Project context
ignore = "0.4"  # For smart file tree scanning
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-cpp = "0.23"
streaming-iterator = "0.1"  # Required for tree-sitter 0.24
petgraph = "0.6"  # Graph algorithms for PageRank

# Config & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
figment = { version = "0.10", features = ["toml", "env"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Parallelization
rayon = "1.10"

# Caching
sha2 = "0.10"
bincode = "1.3"
lz4 = "1.28"

# Markdown rendering
pulldown-cmark = "0.12"

# Utils
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
which = "7.0"  # Find executables
colored = "2.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
sysinfo = "0.31"  # System monitoring
bytes = "1.8"

# Git
git2 = "0.19"

# Additional utilities
once_cell = "1.20"
parking_lot = "0.12"
regex = "1.11"
tiktoken-rs = "0.7"  # Token counting for context windows
notify = "8.2"  # File system watching for external changes
env_logger = "0.11.8"

[dev-dependencies]
tempfile = "3.14"
pretty_assertions = "1.4"
mockall = "0.13"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
